fixed z-index 🤖

--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -5,6 +5,7 @@ nav {
     bottom: 0;
     left: 0;
     right: 0;
+    z-index: 999;
     background-color: rgba(255, 255, 255, .15);  
     backdrop-filter: blur(5px);
 
@@ -19,7 +20,8 @@ nav {
         height: $nav-height;
 
         @include media (xs) {
-            @include flex(column, center, center);
+            @include flex(false, center, center);
+            gap: 1rem;
         }
 
         .logo {
@@ -31,7 +33,11 @@ nav {
 
         .title {
             display: none;
-
+            font-weight: 500;
+            font-size: 2rem;
+            @include media (md) {
+                display: block;
+            }
         }
    }
 
